--- a/package.json
+++ b/package.json
@@ -222,6 +222,7 @@
     "lodash": "4.17.2",
     "minimist": "1.2.0",
     "react": "15.4.1",
+    "react-bootstrap": "^0.31.0",
     "react-dom": "15.4.1",
     "react-fontawesome": "^1.6.1",
     "react-helmet": "3.2.2",
@@ -230,6 +231,7 @@
     "react-router": "3.0.0",
     "react-router-redux": "4.0.6",
     "react-router-scroll": "0.4.1",
+    "react-slick": "^0.14.11",
     "redux": "3.6.0",
     "redux-immutable": "3.0.8",
     "redux-saga": "0.14.0",
@@ -289,7 +291,7 @@
     "sinon": "2.0.0-pre",
     "style-loader": "0.13.1",
     "url-loader": "0.5.7",
-    "webpack": "2.2.0-rc.3",
+    "webpack": "^2.1.0-beta",
     "webpack-dev-middleware": "1.9.0",
     "webpack-hot-middleware": "2.15.0"
   }
